[project]
name = "inno-map-access"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geopandas>=1.1.3",
    "inno-data-access>=0.0.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "planetary-computer>=1.0.0",
    "pystac-client>=0.9.0",
    "rasterio>=1.5.0",
    "requests>=2.32.5",
    "rioxarray>=0.22.0",
    "scipy>=1.17.1",
    "tqdm>=4.67.3",
    "unidecode>=1.4.0",
]

[project.scripts]
inno-map-access = "inno_map_access:main"

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"

[[tool.uv.index]]
url = "https://nexusrepo.natuurenbos.be/repository/anb-python-group/simple/"
name = "nexus"
authenticate = "always"
priority = "supplemental"
